# sql-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ToDo.md  ToDoList.txt  conanfile-linux.txt  conanfile-windows.txt  conanfile.txt  example.txt  experienced-sql-user.md  observer.py  run-by-manager.py  run-cli.py  run.py  test_runner.py
app-info/: CMakeLists.txt  application.cpp  application.hpp  sharelib.hpp
application-info/: CMakeLists.txt  application.cpp  application.hpp  info.hpp
cli/: CMakeLists.txt  cli-app-manager.cpp  cli-app-manager.hpp  cli-operations.cpp  cli-operations.hpp  db-manager.cpp  db-manager.hpp  executor.py  input-parser.cpp  input-parser.hpp  input_parser.py  input_reader.py  io-manager.cpp  io_manager.py  loop.py  main.cpp  state.py  tasks.txt  visitor.py  wrapper-interface.py  wrapper.py
database/: CMakeLists.txt  column-constraint.hpp  column-element.cpp  column-element.hpp  column.cpp  column.hpp  column.py  constraints.py  data_saver.py  database copy.hpp  database.cpp  database.hpp  database.py  db_manager.py  element.py  file_manager.py  manager.py  row-element.cpp  row-element.hpp  row-oriented-table.cpp  row-oriented-table.hpp  row.cpp  row.hpp  row.py  sharelib.hpp  table.cpp  table.hpp  table.py
db-lib/: CMakeLists.txt
db-lib/database/: CMakeLists.txt  database.cpp  database.hpp  sharelib.hpp
db-lib/db-manager/: CMakeLists.txt  db-manager-info.cpp  db-manager-info.hpp  db-manager-init.cpp  db-manager-init.hpp  db-manager.cpp  db-manager.hpp
db-lib/filestream/: CMakeLists.txt  db-filestream.cpp  db-filestream.hpp  sharelib.hpp
db-lib/interface/: CMakeLists.txt  db-manager.cpp  db-object.cpp  i-column-component.hpp  i-column-element.hpp  i-column-id.hpp  i-column-init.hpp  i-column.hpp  i-database-component.hpp  i-database-comps.hpp  i-database-element.hpp  i-database-id.hpp  i-database-info.hpp  i-database-init.hpp  i-database.hpp  i-db-filestream.hpp  i-db-manager-component.hpp  i-db-manager-data.hpp  i-db-manager-id.hpp  i-db-manager-info.hpp  i-db-manager-init.hpp  i-db-manager-read.hpp  i-db-manager-stream-init.hpp  i-db-manager-stream.hpp  i-db-manager.hpp  i-db-object.hpp  i-row-component.hpp  i-row-comps.hpp  i-row.hpp  i-table-component.hpp  row.cpp
db-lib/table/: CMakeLists.txt  table.cpp  table.hpp
db-manager/: CMakeLists.txt  database.cpp  database.hpp  db-local-json-reader.cpp  db-local-json-stream.hpp  db-local-json-struct.hpp  db-local-json-writer.cpp  db-manager-info.cpp  db-manager-info.hpp  db-manager-init.cpp  db-manager-init.hpp  db-manager.cpp  db-manager.hpp  i-column.hpp  i-database.hpp  i-db-component.hpp  i-db-filestream.hpp  i-db-manager.hpp  i-row.hpp  i-table.hpp  idb.hpp  sharelib.hpp
db-stream/: CMakeLists.txt  db-stream.cpp  db-stream.hpp  sharelib.hpp
interface/: CMakeLists.txt  column.cpp  database.cpp  db-manager.cpp  db-object.cpp  db-stream.cpp  dyn-object.cpp  dynamic-types.cpp  element.cpp  i-column-comps.hpp  i-column-constraint.hpp  i-column-element.hpp  i-column-id.hpp  i-column-info.hpp  i-column-init.hpp  i-column.hpp  i-database-component.hpp  i-database-comps.hpp  i-database-element.hpp  i-database-id.hpp  i-database-info.hpp  i-database-init.hpp  i-database.hpp  i-db-filestream.hpp  i-db-manager-component.hpp  i-db-manager-comps.hpp  i-db-manager-id.hpp  i-db-manager-info.hpp  i-db-manager-init.hpp  i-db-manager-stream-init.hpp  i-db-manager-stream.hpp  i-db-manager.hpp  i-db-object.hpp  i-db-stream.hpp  i-dyn-object.hpp  i-dynamic-types.hpp  i-element.hpp  i-query-executor.hpp  i-query.hpp  i-row-component.hpp  (+17 more)
local-database/: CMakeLists.txt  db-local-json-reader.cpp  db-local-json-stream.hpp  db-local-json-struct.hpp  db-local-json-utility.hpp  db-local-json-writer.cpp  local-database.cpp  local-database.hpp  sharelib.hpp
logging/: CMakeLists.txt  boost-wrapper.cpp  boost-wrapper.hpp  console-log.cpp  console-log.hpp  easy-log.cpp  easy-log.hpp  file-log.cpp  file-log.hpp  fmt-log.cpp  fmt-log.hpp  ilogger.cpp  ilogger.hpp  log-core.cpp  log-core.hpp  logging.cpp  logging.hpp  sharelib.hpp
observer/: CMakeLists.txt  main.cpp
other/fmt-logging/: CMakeLists.txt  fmt-log.cpp  fmt-log.hpp  log-core.cpp  log-core.hpp  logging.cpp  logging.hpp  main.cpp
query-parser/: CMakeLists.txt  flex-scanner.l  json-queries-file-parser.cpp  json-queries-template.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  parsers.hpp  sharelib.hpp
sql-engine/: CMakeLists.txt  core.cpp  core.hpp  database.cpp  database.hpp  engine.cpp  engine.hpp  sharelib.hpp
table/: CMakeLists.txt  column-constraint.cpp  column-constraint.hpp  column-element.cpp  column-element.hpp  column-id.cpp  column-id.hpp  column.cpp  column.hpp  dyn-object.cpp  dyn-object.hpp  dyn-value.cpp  row-element.cpp  row-element.hpp  row.cpp  row.hpp  sharelib.hpp  table.cpp  table.hpp
testing/: CMakeLists.txt
testing/core/: CMakeLists.txt  core.cpp  core.hpp  tdp-object.cpp
testing/database/: CMakeLists.txt  main.cpp  run-test.cpp  run-test.hpp  test-column-element.cpp  test-column.cpp  test-database.cpp  test-row-oriented-table.cpp  test-table.cpp  utility.cpp  utility.hpp
testing/db-manager/: CMakeLists.txt  test-db-local-json-reader.cpp  test-db-local-json-writer.cpp  utility.cpp  utility.hpp
testing/dir-preparator/: CMakeLists.txt  dir-impl.cpp  file-impl.cpp  impl.hpp  preparator.cpp  preparator.hpp  sharelib.hpp
testing/json-query-parser/: dir-preparation-impl.hpp  dir-preparation.cpp  dir-preparation.hpp  main.cpp  preparation-create-database.cpp  preparation-create-delete-queries.cpp  preparation-create-insert-into-queries.cpp  preparation-create-select-queries.cpp  preparation-create-update-queries.cpp  preparation-result-delete-categories.cpp  preparation-result-delete-tasks.cpp  (+13 more)
utility/: CMakeLists.txt  console.py  core.cpp  core.hpp  core.py  defines.hpp  file.cpp  file.hpp  file.py  filesystem.cpp  filesystem.hpp  fs-dir.cpp  fs-file.cpp  fs-list-dir.cpp  fs-path.cpp  libdef.hpp  logging.cpp  logging.hpp  options.cpp  options.hpp  sharelib.hpp  utility.cpp  utility.hpp
(+190 files in other folders)
